[~] Реализованы методы uploadImg и login из Admin/Volunteer; [~] Проект настроен на работу в GCP
